--- a/MercuryProject.Application/MercuryProject.Application.csproj
+++ b/MercuryProject.Application/MercuryProject.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.2.1" />
     <PackageReference Include="FluentValidation" Version="11.5.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
@@ -16,10 +22,6 @@
   <ItemGroup>
     <ProjectReference Include="..\MercuryProject.Contracts\MercuryProject.Contracts.csproj" />
     <ProjectReference Include="..\MercuryProject.Domain\MercuryProject.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
