--- a/MercuryProject.API/appsettings.Development.json
+++ b/MercuryProject.API/appsettings.Development.json
@@ -15,6 +15,6 @@
         "Key" : ""
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=MercuryProject; Trusted_Connection=True;"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=MercuryProjectDev; Trusted_Connection=True;"
     }
 }
